// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBadge auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="Avatar-root Avatar-xsmall"
        >
          <div
            class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
          />
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-displayBlock Avatar-text"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          style="margin-bottom: 0.25em; display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-displayInline"
          >
            Joe Doe
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge default render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="Avatar-root Avatar-xsmall"
        >
          <div
            class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
          />
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-displayBlock Avatar-text"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          style="margin-bottom: 0.25em; display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-displayInline"
          >
            Joe Doe
          </h5>
        </div>
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-displayBlock"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge invert render 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="Avatar-root Avatar-xsmall"
        >
          <div
            class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
          />
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-displayBlock Avatar-text"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          style="margin-bottom: 0.25em; display: block;"
        >
          <h5
            class="MuiTypography-root Typography-invert Typography-semibold MuiTypography-h5 MuiTypography-displayInline"
          >
            Joe Doe
          </h5>
        </div>
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-displayBlock"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge manual center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="Avatar-root Avatar-xsmall"
        >
          <div
            class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
          />
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-displayBlock Avatar-text"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          style="margin-bottom: 0.25em; display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-displayInline"
          >
            Joe Doe
          </h5>
        </div>
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-displayBlock"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge override auto center alignment 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="Avatar-root Avatar-xsmall"
        >
          <div
            class="Avatar-textContainer Avatar-square Avatar-xsmall Avatar-clippedCorner"
          />
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-displayBlock Avatar-text"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          style="margin-bottom: 0.25em; display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-displayInline"
          >
            Joe Doe
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserBadge small size 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs MuiGrid-align-items-xs-flex"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          class="Avatar-root Avatar-small"
        >
          <div
            class="Avatar-textContainer Avatar-square Avatar-small Avatar-clippedCorner"
          />
          <p
            class="MuiTypography-root Typography-body Typography-invert Typography-regular MuiTypography-body1 MuiTypography-displayBlock Avatar-text"
          >
            JD
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <div
          style="margin-bottom: 0.25em; display: block;"
        >
          <h5
            class="MuiTypography-root Typography-semibold MuiTypography-h5 MuiTypography-displayInline"
          >
            Joe Doe
          </h5>
        </div>
        <p
          class="MuiTypography-root Typography-body Typography-regular MuiTypography-body1 MuiTypography-displayBlock"
        >
          QA tester
        </p>
      </div>
    </div>
  </div>
</div>
`;
